# ArxivPapers

./: .gitignore  arxiv-papers.py  devenv.nix  flake.nix  pyproject.toml  requirements.txt
src/arxiv_papers/: __init__.py
src/gdrive/: utils.py
src/gpt/: utils.py
src/htmls/: utils.py
src/map/: utils.py
src/speech/: utils.py
src/tex/: utils.py
src/zip/: utils.py
