[project]
name = "arxiv-papers"
version = "0.1.0"
description = "Generate audio readthrough of ArXiv papers"
authors = [
    { name = "Henry Ruben Fischer", email = "henryrubenfischer@gmail.com" },
]
readme = "README.md"

[project.scripts]
arxiv-papers = "arxiv_papers:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arxiv_papers"]
